--- a/day-7-finalUI-task/assets/scss/molecules/footer/_footer_boxes.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/footer/_footer_boxes.scss
@@ -64,3 +64,22 @@ $link_color: #d9dbe1;
     color: white !important;
   }
 }
+
+@media (max-width: 600px) {
+  footer {
+    .footer_logo,
+    .footer-Company,
+    .footer-Support,
+    .footer-input {
+      width: 100%;
+      flex-direction: column;
+    }
+
+    .footer-Company,
+    .footer-Support {
+      ul {
+        padding-left: 10rem;
+      }
+    }
+  }
+}
