--- a/day-7-finalUI-task/assets/scss/molecules/index.css
+++ b/day-7-finalUI-task/assets/scss/molecules/index.css
@@ -4,6 +4,146 @@
   margin-right: 1rem;
 }
 
+.logo img {
+  max-width: 100%;
+}
+
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  gap: 0.3rem;
+  position: absolute;
+  right: 1rem;
+  cursor: pointer;
+  top: 1rem;
+}
+.menu-icon span {
+  width: 25px;
+  height: 3px;
+  background-color: #18191f;
+}
+
+.link ul {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+.link ul li a {
+  color: #18191f !important;
+  text-decoration: none !important;
+}
+
+.nav-btn {
+  display: flex;
+  gap: 1rem;
+}
+.nav-btn .nav_btn-1 {
+  background-color: white;
+  color: #4caf4f;
+  border: none;
+  padding: 0.4rem 2rem;
+  border-radius: 6px;
+}
+.nav-btn .nav_btn-2 {
+  background-color: #4caf4f;
+  color: white;
+  border: none;
+  padding: 0.4rem 2rem;
+  border-radius: 6px;
+}
+
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .link,
+  .nav-btn {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #f5f7fa;
+    padding: 1rem;
+  }
+  .link.active,
+  .nav-btn.active {
+    display: flex;
+  }
+  .menu-icon {
+    display: flex;
+  }
+  .link {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #f5f7fa;
+    padding: 1rem;
+  }
+  .link ul {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .logo {
+    margin-top: 1rem;
+  }
+  .nav-btn {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .link.active,
+  .nav-btn.active {
+    display: flex;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .link,
+  .nav-btn {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #f5f7fa;
+    padding: 1rem;
+  }
+  .link.active,
+  .nav-btn.active {
+    display: flex;
+  }
+  .menu-icon {
+    display: flex;
+  }
+  .link {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #f5f7fa;
+    padding: 1rem;
+  }
+  .link ul {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .logo {
+    margin-top: 1rem;
+  }
+  .nav-btn {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .link.active,
+  .nav-btn.active {
+    display: flex;
+  }
+}
 .main_sect {
   padding: 0 rem;
   display: flex;
@@ -24,6 +164,26 @@
   margin-top: 1.5rem;
 }
 
+@media (max-width: 600px) {
+  .main_sect {
+    flex-direction: column;
+    height: 45rem;
+    padding: 0 2rem !important;
+  }
+  .main_sect h2 {
+    font-size: 3.5rem !important;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .main_sect {
+    flex-direction: column;
+    height: 61vh;
+    padding: 0 2rem !important;
+  }
+  .main_sect h2 {
+    font-size: 3.5rem !important;
+  }
+}
 .system-box {
   height: 70%;
   margin-top: 1rem !important;
@@ -54,6 +214,24 @@
   margin-top: 3rem !important;
 }
 
+@media (max-width: 600px) {
+  .system-box {
+    flex-direction: column;
+    margin-top: 2rem !important;
+    align-items: center;
+    height: 60rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .system-box {
+    margin-top: 1rem !important;
+    width: 100%;
+    gap: 1rem;
+  }
+  .system-box .items-box {
+    width: 16.75rem !important;
+  }
+}
 .pixel-sec {
   height: 90%;
   display: flex;
@@ -74,6 +252,23 @@
   padding: 10rem;
 }
 
+@media (max-width: 600px) {
+  .pixel-sec {
+    flex-direction: column-reverse;
+    justify-content: center;
+    height: 50rem;
+    padding: 2rem !important;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .pixel-sec {
+    flex-direction: column;
+    justify-content: center;
+    height: 50rem;
+    width: 40%;
+    padding: 2rem !important;
+  }
+}
 .local-h3 {
   font-weight: 600 !important;
   font-size: 3rem !important;
@@ -94,16 +289,17 @@ p {
   align-content: center;
 }
 .local-div .local-div__left {
-  width: 80%;
+  width: 50%;
   height: 100%;
   margin-right: 1rem;
 }
 .local-div .local-div__right {
-  width: 60%;
+  width: 50%;
   height: 100%;
-  margin-top: 3.4rem;
   display: flex;
-  margin-right: 14rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: first baseline;
 }
 .local-div .local-div__right .items {
   width: 5rem;
@@ -128,27 +324,118 @@ p {
   margin: 0 !important;
   padding: 0;
 }
-.local-div .local-div__right .flex-right {
-  position: relative;
-  bottom: 3rem;
-}
 .local-div .local-div__right .flex-right,
 .local-div .local-div__right .flex-left {
   display: flex;
   gap: 1rem;
 }
 
-.design .pixel-sec {
-  flex-direction: row !important;
+@media (max-width: 600px) {
+  .items {
+    margin: 0.4rem !important;
+  }
+  .local-div {
+    flex-direction: column;
+    height: 50rem;
+  }
+  .local-div__left {
+    width: 90% !important;
+  }
+  .local-div__right {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90% !important;
+    margin-right: 1rem !important;
+  }
+  .local-div__right h3 {
+    font-size: 1rem !important;
+  }
+  .local-div__right .flex-left,
+  .local-div__right .flex-right {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
-.design .pixel-sec button,
-.design .pixel-sec p {
+@media (min-width: 601px) and (max-width: 1024px) {
+  .items {
+    margin: 0.4rem !important;
+  }
+  .local-div {
+    flex-direction: column;
+    height: 50rem;
+  }
+  .local-div__left {
+    width: 90% !important;
+  }
+  .local-div__right {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 90% !important;
+    margin-right: 1rem !important;
+    margin-bottom: 7rem;
+    margin-left: 11rem;
+  }
+  .local-div__right h3 {
+    font-size: 1rem !important;
+  }
+  .local-div__right .flex-left,
+  .local-div__right .flex-right {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+.design .pixel-sec-design {
+  height: 30rem !important;
+  display: flex;
+}
+.design button,
+.design p {
   margin-top: 2.5rem;
 }
-.design .pixel-sec.data p {
+.design.data p {
   padding-top: 2.5rem !important;
 }
 
+@media (max-width: 600px) {
+  .design {
+    flex-direction: column-reverse !important;
+    height: 60rem;
+  }
+  .design .pixel-sec {
+    flex-direction: column;
+    justify-content: center;
+    height: 50rem;
+    padding: 2rem !important;
+  }
+  .design .pixel-sec__data {
+    width: 80% !important;
+    background-color: aqua;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .design {
+    flex-direction: column-reverse !important;
+    height: 60rem;
+  }
+  .design .pixel-sec-design__div {
+    margin-left: 1rem !important;
+  }
+  .design .pixel-sec {
+    flex-direction: row;
+    justify-content: center;
+    height: 50rem;
+    padding: 2rem !important;
+  }
+  .design .pixel-sec__data {
+    width: 80% !important;
+    background-color: aqua;
+    padding-right: 0 !important;
+  }
+}
 .tesla-section {
   display: flex;
   width: 100%;
@@ -183,6 +470,28 @@ p {
   margin-top: 2rem;
 }
 
+@media (max-width: 600px) {
+  .tesla-section {
+    flex-direction: column;
+  }
+  .tesla-section .tesla-section__left {
+    width: 100%;
+    margin-top: 3rem;
+    flex-direction: column;
+  }
+  .tesla-section .botton-tesla {
+    padding-top: 1rem;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .tesla-section .botton-tesla .tesls-client-img {
+    width: 90%;
+  }
+  .tesla-section .tesla-section__right {
+    width: 100%;
+    padding: 0 2rem;
+  }
+}
 .marketing h3 {
   margin-top: 2rem;
 }
@@ -193,36 +502,79 @@ p {
 }
 .marketing .market-box {
   margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
 }
-.marketing .market-box__box {
-  background-color: aquamarine;
+.marketing .glow-box {
+  width: 90%;
+  height: 14rem;
+  display: flex;
+  gap: 7.5rem;
+  top: 230rem;
+  justify-content: center;
+  position: absolute;
 }
-.marketing .market-box__box .market-box__box-divs {
+.marketing .glow-box .market-box__box-divs {
   width: 19rem;
   border-radius: 8px;
-  position: absolute;
   background-color: #f5f7fa;
   height: 11rem;
-  top: 222rem;
   padding: 0 16px;
   box-shadow: 28px -1px 49px #b1b1b1, 0 12px 22px #f5f7fa;
 }
-.marketing .market-box__box .market-box__box-divs div {
+.marketing .glow-box .market-box__box-divs div {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
 }
-.marketing .market-box__box .market-box__box-divs h3 {
+.marketing .glow-box .market-box__box-divs h3 {
   font-size: 20px !important;
   line-height: 1.9rem;
   margin-top: 0 !important;
   margin-bottom: -1rem !important;
 }
+.marketing .market-box__box {
+  background-color: aquamarine;
+}
 .marketing .market-box__box p {
   padding: 0 !important;
 }
 
+@media (max-width: 600px) {
+  .marketing p {
+    padding: 1rem !important;
+  }
+  .marketing .system-box {
+    margin-top: 7rem !important;
+  }
+  .marketing .system-box .market-box__box-divs {
+    width: 19rem;
+    border-radius: 8px;
+    position: absolute;
+    background-color: #f5f7fa;
+    height: 13rem;
+    top: 2rem;
+    padding: 0 16px;
+    box-shadow: 28px -1px 49px #b1b1b1, 0 12px 22px #f5f7fa;
+  }
+  .marketing .market-box {
+    flex-direction: column;
+    gap: 10rem;
+  }
+  .marketing .glow-box {
+    top: 60rem !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 18rem;
+  }
+  .marketing .market-box__box-divs div {
+    flex-direction: row;
+  }
+}
 .footer_logo,
 .footer-Company,
 .footer-Support,
@@ -279,4 +631,18 @@ p {
   font-size: 1.8rem !important;
   margin-top: 4rem !important;
   color: white !important;
+}
+
+@media (max-width: 600px) {
+  footer .footer_logo,
+  footer .footer-Company,
+  footer .footer-Support,
+  footer .footer-input {
+    width: 100%;
+    flex-direction: column;
+  }
+  footer .footer-Company ul,
+  footer .footer-Support ul {
+    padding-left: 10rem;
+  }
 }/*# sourceMappingURL=index.css.map */
