--- a/day-7-finalUI-task/assets/scss/organism/marketing/_marketing.scss
+++ b/day-7-finalUI-task/assets/scss/organism/marketing/_marketing.scss
@@ -1,3 +1,10 @@
 .marketing {
   height: 31.625rem;
 }
+
+@media (max-width: 600px) {
+  .marketing {
+    height: 100rem;
+    position: relative;
+  }
+}
