--- a/day-7-finalUI-task/assets/scss/base/index.css
+++ b/day-7-finalUI-task/assets/scss/base/index.css
@@ -3,8 +3,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: inter;
-  font-size: 16;
+  font-family: "Inter", sans-serif !important;
+  font-size: 16px;
   font-style: normal;
   text-decoration: none;
 }/*# sourceMappingURL=index.css.map */
