--- a/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
@@ -19,3 +19,27 @@ $paragraph_color: #717171;
   padding: 1rem 2.3rem;
   margin-top: 1.5rem;
 }
+
+@media (max-width: 600px) {
+  .main_sect {
+    flex-direction: column;
+    height: 45rem;
+    padding: 0 2rem !important;
+
+    h2 {
+      font-size: 3.5rem !important;
+    }
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .main_sect {
+    flex-direction: column;
+    height: 61vh;
+    padding: 0 2rem !important;
+
+    h2 {
+      font-size: 3.5rem !important;
+    }
+  }
+}
