--- a/day-7-finalUI-task/assets/scss/organism/client/_client.scss
+++ b/day-7-finalUI-task/assets/scss/organism/client/_client.scss
@@ -1,4 +1,5 @@
 $paragraph_color: #717171;
+$even_container_bg: #f5f7fa;
 
 .client {
   height: 12.875rem;
@@ -7,5 +8,17 @@ $paragraph_color: #717171;
   p {
     padding: 0rem;
     color: $paragraph_color !important;
+  }
+}
+@media (max-width: 600px) {
+  .client {
+    margin-top: 9rem;
+    height: 20rem;
+    background-color: $even_container_bg;
+
+    .client-logo-img {
+      width: 90%;
+      height: 10rem;
+    }
   }
 }
