--- a/day-7-finalUI-task/assets/scss/organism/localbusiness/_localbusiness-sec.scss
+++ b/day-7-finalUI-task/assets/scss/organism/localbusiness/_localbusiness-sec.scss
@@ -4,3 +4,15 @@ $even_container_bg: #f5f7fa;
   background-color: $even_container_bg;
   height: 19.875rem;
 }
+@media (max-width: 600px) {
+  .localbusiness-div {
+    height: 50rem;
+    text-align: center;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .localbusiness-div {
+    height: 45rem;
+    text-align: center;
+  }
+}
