--- a/day-7-finalUI-task/assets/scss/organism/pixelgrade/_pixelgrade.scss
+++ b/day-7-finalUI-task/assets/scss/organism/pixelgrade/_pixelgrade.scss
@@ -6,3 +6,17 @@
     padding-bottom: 0;
   }
 }
+
+@media (max-width: 600px) {
+  .pixelgrade {
+    height: 60rem;
+    margin-top: 2rem !important ;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .pixelgrade {
+    height: 50rem;
+    text-align: center;
+  }
+}
