--- a/day-7-finalUI-task/assets/scss/molecules/local/_local-div.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/local/_local-div.scss
@@ -111,8 +111,9 @@ p {
   }
 
   .local-div__right {
-    flex-direction: row;
+    flex-direction: row !important;
     align-items: center;
+    gap: 7rem !important ;
     justify-content: center;
     width: 90% !important;
     margin-right: 1rem !important;
